# P3DX-Docker

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  rosPkgs.list
depthimage_to_laserscan/launch/: launchfile_sample.launch
depthimage_to_laserscan/src/: DepthImageToLaserScan.cpp
face_recognition_ros_wrapper/launch/: live_face_recognition_from_video_stream.launch
face_recognition_ros_wrapper/scripts/: add_new_face_server  recognize_faces_in_stream
laser_filters/examples/: angle_range_filter.launch  angle_range_filter.yaml
pointcloud_to_laserscan/launch/: sample_node.launch
pointcloud_to_laserscan/src/: pointcloud_to_laserscan_nodelet.cpp
realsense-ros/realsense2_camera/launch/: rs_camera.launch
rplidar_ros/launch/: rplidar_a3.launch
turtlebot3_navigation/launch/: amcl.launch  bringup.launch  move_base.launch  test.txt  turtlebot3_navigation.launch
turtlebot3_navigation/maps/: test_map2.pgm  test_map2.yaml
turtlebot3_navigation/param/: base_local_planner_params.yaml  costmap_common_params_waffle.yaml  dwa_local_planner_params_waffle.yaml  dwb_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
turtlebot3_navigation/param1/: costmap_common_params.yaml  dwb_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
turtlebot3_navigation/rviz/: turtle1.rviz  turtlebot3_navigation.rviz
turtlebot3_navigation/scripts/: Voice_NLP  talker
ua_ros_p3dx/p3dx_control/: CMakeLists.txt
ua_ros_p3dx/p3dx_control/src/: robot_teleop_key
ua_ros_p3dx/p3dx_description/launch/: rviz.launch
ua_ros_p3dx/p3dx_description/rviz/: display.rviz
ua_ros_p3dx/p3dx_description/urdf/: _d435.xacro  pioneer3dx.gazebo  pioneer3dx.xacro  pioneer3dx.xml  pioneer3dx_wheel.xacro  temp.txt
ua_ros_p3dx/p3dx_gazebo/launch/: gazebo.launch
ua_ros_p3dx/p3dx_mapping/: CMakeLists.txt  package.xml
ua_ros_p3dx/p3dx_mapping/config/: gmapping_params.yaml
ua_ros_p3dx/p3dx_mapping/launch/: gmapping.launch
ua_ros_p3dx/p3dx_mapping/rviz/: cartographer.rviz  mapper.rviz
